Corrected how orphan page names are rendered in All Pages list
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@287 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/list.rhtml
+++ b/app/views/wiki/list.rhtml
@@ -56,7 +56,7 @@
   <ul style="margin-bottom: 35px">
     <% @pages_that_are_orphaned.each do |orphan_page| %>
       <li>
-        <%= link_to_existing_page orphan_page %>
+        <%= link_to_existing_page orphan_page, truncate(orphan_page.plain_name, 35) %>
       </li>
     <% end %>
   </ul>
