--- a/app/views/wiki/authors.rhtml
+++ b/app/views/wiki/authors.rhtml
@@ -5,7 +5,7 @@
     <li>
       <%= link_to_page author %>
       co- or authored:
-      <%= @web.select.pages_authored_by(author).collect { |page| link_to_page(page.name) }.join ', ' %>
+      <%= @web.select.pages_authored_by(author).collect { |page| link_to_page(page.name) }.sort.join ', ' %>
     </li>
   <% end %>
 </ul>
