Further tweaking of markup error handling code
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@299 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/layouts/default.rhtml
+++ b/app/views/layouts/default.rhtml
@@ -61,11 +61,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   </h1>
 
 <% if @error or @flash[:error] %> <div id="error">
-    <hr/><p><%= h(@error || @flash[:error]) %></p><hr/></div>
+    <hr/><p><%= escape_preserving_linefeeds(@error || @flash[:error]) %></p><hr/></div>
 <% end %>
 
 <% if @flash[:info] %> <div id="info">
-    <hr/><p><%= h @flash[:info] %></p><hr/></div>
+    <hr/><p><%= escape_preserving_linefeeds @flash[:info] %></p><hr/></div>
 <% end %>
 
 <%= render 'navigation' unless @web.nil? || @hide_navigation %>
