Adde a real href to Textile syntax hyperlink
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@303 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/textile_help.rhtml
+++ b/app/views/textile_help.rhtml
@@ -1,4 +1,4 @@
-<h3>Textile formatting tips (<a href="#" onClick="quickRedReference(); return false;">advanced</a>)</h3>
+<h3>Textile formatting tips (<a href="http://hobix.com/textile/quick.html" onClick="quickRedReference(); return false;">advanced</a>)</h3>
 <table cellspacing="0" cellpadding="0">
   <tr><td>_your text_</td><td class="arrow">&rarr;</td><td><em>your text</em></td></tr>
   <tr><td>*your text*</td><td class="arrow">&rarr;</td><td><strong>your text</strong></td></tr>
