Replaced links to static resources with appropriate Rails helpers
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@304 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/admin/edit_web.rhtml
+++ b/app/views/admin/edit_web.rhtml
@@ -135,5 +135,4 @@ TODO Enable these input elements again after release 0.10
   </p>
 <%= end_form_tag %>
 
-<script type="text/javascript" src="/javascripts/edit_web.js" />
-<script type="text/javascript">overrideAutocomplete()</script>
+<%= javascript_include_tag 'edit_web' %>
