Dropped number from revision table. Also dropped timestamp. We will rely on autoincremented ID for sorting, and will for now store the time of last edit of the revision in revised_at. Later we will refactor content into a separate table (so as not to load the whole 300 kb of text and cached HTML every time we need page.revisions in code). Rake tests all pass, but watir tests indicate that some revision traversing links are still broken
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@351 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/rollback.rhtml
+++ b/app/views/wiki/rollback.rhtml
@@ -1,5 +1,5 @@
 <% 
-  @title = "Rollback to #{@page.plain_name} Rev ##{@revision.number}"
+  @title = "Rollback to #{@page.plain_name} Rev ##{@revision_number}"
   @content_width = 720
   @hide_navigation = true
 %>
