--- a/app/views/wiki/page.rhtml
+++ b/app/views/wiki/page.rhtml
@@ -12,7 +12,7 @@
   <div id="changes" style="display: none">
     <p style="background: #eee; padding: 3px; border: 1px solid silver">
       <small>
-        Showing changes from revision #<%= @page.number - 1 %> to #<%= @page.number %>:
+        Showing changes from revision #<%= @page.revisions.size - 1 %> to #<%= @page.revisions.size %>:
         <ins class="diffins">Added</ins> | <del class="diffdel">Removed</del>
       </small>
     </p>
@@ -22,7 +22,7 @@
 <% end %>
 
 <div class="byline">
-  <%= @page.revisions? ? "Revised" : "Created" %> on <%= @page.pretty_created_at %> 
+  <%= @page.revisions? ? "Revised" : "Created" %> on <%= @page.pretty_created_on %> 
   by <%= @page.author_link %>
   <%= "(#{@page.author.ip})" if @page.author.respond_to?(:ip) %>
   <% if @web.count_pages? %>
