--- a/app/views/wiki/print.rhtml
+++ b/app/views/wiki/print.rhtml
@@ -8,7 +8,7 @@
 <%= @page.display_content_for_export %>
 
 <div class="byline">
-  <%= @page.revisions? ? "Revised" : "Created" %> on <%= @page.pretty_created_at %> 
+  <%= @page.revisions? ? "Revised" : "Created" %> on <%= @page.pretty_created_on %> 
   by
   <%= @page.author_link({ :mode => (@link_mode || :show) }) %>
 </div>
