--- a/app/views/wiki/recently_revised.rhtml
+++ b/app/views/wiki/recently_revised.rhtml
@@ -17,7 +17,7 @@
       <%= link_to_existing_page page %>
       <div class="byline" style="margin-bottom: 0px">
         by <%= link_to_page(page.author) %>
-        at <%= page.created_at.strftime "%H:%M" %>
+        at <%= page.current_revision.pretty_created_on %>
         <%= "from #{page.author.ip}" if page.author.respond_to?(:ip) %>
       </div>
     </li>
