--- a/app/views/wiki/revision.rhtml
+++ b/app/views/wiki/revision.rhtml
@@ -1,4 +1,4 @@
-<% @title = "#{@page.plain_name} (Rev ##{@revision.number})" %>
+<% @title = "#{@page.plain_name} (Rev ##{@revision_number})" %>
 
 <div id="revision">
   <%= @revision.display_content %>
@@ -7,7 +7,7 @@
 <div id="changes" style="display: none">
   <p style="background: #eee; padding: 3px; border: 1px solid silver">
     <small>
-      Showing changes from revision #<%= @revision.number - 1 %> to #<%= @revision.number %>:
+      Showing changes from revision #<%= @revision_number - 1 %> to #<%= @revision_number %>:
       <ins class="diffins">Added</ins> | <del class="diffdel">Removed</del>
     </small>
   </p>
@@ -17,17 +17,17 @@
 
 
 <div class="byline">
-  <%= "Revision from #{@revision.pretty_created_at} by" %>
+  <%= "Revision from #{@revision.pretty_created_on} by" %>
   <%= link_to_page @revision.author %>
 </div>
 
 <div class="navigation">
 
-  <% if @revision.next_revision %>
-    <% if @revision.next_revision.number < (@page.revisions.length - 1) %>
+  <% if @revision_number < @page.revisions.length - 1 %>
+    <% if @revision_number < @page.revisions.length - 2 %>
       <%= link_to('Forward in time',
               {:web => @web.address, :action => 'revision', :id => @page.name, 
-               :rev => @revision.next_revision.number},
+               :rev => @revision_number + 1},
               {:class => 'navlink', :name => 'to_next_revision'})
       %>
     <% else %>
@@ -36,20 +36,20 @@
               {:class => 'navlink', :name => 'to_next_revision'})
       %>
     <% end %>
-    <small>(<%= @revision.page.revisions.length - @revision.next_revision.number %> more)</small>
+    <small>(<%= @revision.page.revisions.length - @revision_number - 1 %> more)</small>
   <% end %>
 
-  <% if @revision.next_revision && @revision.previous_revision %>
+  <% if @revision_number > 0 && @revision_number < @page.revisions.size - 1 %>
     |
   <% end %>
 
-  <% if @revision.previous_revision %>
+  <% if @revision_number > 0 %>
     <%= link_to('Back in time',
           {:web => @web.address, :action => 'revision', :id => @page.name, 
-           :rev => @revision.previous_revision.number},
+           :rev => @revision_number - 1},
           {:class => 'navlink', :name => 'to_previous_revision'})
     %>
-    <small>(<%= @revision.previous_revision.number + 1 %> more)</small>
+    <small>(<%= @revision_number %> more)</small>
   <% end %>
 
   | 
@@ -57,7 +57,7 @@
           {:class => 'navlink', :name => 'to_current_revision'})
   %>
 
-  <% if @revision.previous_revision %>
+  <% if @revision_number > 0 %>
     <span id="show_changes">
       | <a href="#" onClick="toggleChanges(); return false;">See changes</a>
     </span>
@@ -69,7 +69,7 @@
   | 
   
   <%= link_to('Rollback', 
-        {:web => @web.address, :action => 'rollback', :id => @page.name, :rev => @revision.number},
+        {:web => @web.address, :action => 'rollback', :id => @page.name, :rev => @revision_number},
         {:class => 'navlink', :name => 'rollback'})
   %>
   
