Fixed revision numbers in page.rhtml. All Watir tests now pass.
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@353 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/page.rhtml
+++ b/app/views/wiki/page.rhtml
@@ -12,7 +12,7 @@
   <div id="changes" style="display: none">
     <p style="background: #eee; padding: 3px; border: 1px solid silver">
       <small>
-        Showing changes from revision #<%= @page.revisions.size - 1 %> to #<%= @page.revisions.size %>:
+        Showing changes from revision #<%= @page.revisions.size - 2 %> to #<%= @page.revisions.size - 1 %>:
         <ins class="diffins">Added</ins> | <del class="diffdel">Removed</del>
       </small>
     </p>
