Moved pretty date formatting from revision to the main view helper, where this presentation logic obviously belongs
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@355 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/page.rhtml
+++ b/app/views/wiki/page.rhtml
@@ -22,7 +22,7 @@
 <% end %>
 
 <div class="byline">
-  <%= @page.revisions? ? "Revised" : "Created" %> on <%= @page.pretty_created_on %> 
+  <%= @page.revisions? ? "Revised" : "Created" %> on <%= format_date(@page.revised_at) %> 
   by <%= @page.author_link %>
   <%= "(#{@page.author.ip})" if @page.author.respond_to?(:ip) %>
   <% if @web.count_pages? %>
