Fix for ticket:189
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@358 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/new.rhtml
+++ b/app/views/wiki/new.rhtml
@@ -1,5 +1,5 @@
 <% 
-  @title = "Creating #{WikiWords.separate(CGI.unescape(@page_name))}"
+  @title = "Creating #{WikiWords.separate(@page_name)}"
   @content_width = 720
   @hide_navigation = true
 %>
