Extacted rendering logic from the model
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@372 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/page.rhtml
+++ b/app/views/wiki/page.rhtml
@@ -4,7 +4,7 @@
 %>
 
 <div id="revision">
-  <%= @page.display_content %>
+  <%= @renderer.display_content %>
 </div>
 
 
@@ -17,7 +17,7 @@
       </small>
     </p>
 
-    <%= @page.display_diff %>
+    <%= @renderer.display_diff %>
   </div>
 <% end %>
 
