--- a/app/views/wiki/revision.rhtml
+++ b/app/views/wiki/revision.rhtml
@@ -1,7 +1,7 @@
 <% @title = "#{@page.plain_name} (Rev ##{@revision_number})" %>
 
 <div id="revision">
-  <%= @revision.display_content %>
+  <%= @renderer.display_content %>
 </div>
 
 <div id="changes" style="display: none">
@@ -12,7 +12,7 @@
     </small>
   </p>
 
-  <%= @revision.display_diff %>
+  <%= @renderer.display_diff %>
 </div>
 
 
