--- a/app/views/wiki/print.rhtml
+++ b/app/views/wiki/print.rhtml
@@ -10,5 +10,5 @@
 <div class="byline">
   <%= @page.revisions? ? "Revised" : "Created" %> on <%= format_date(@page.revised_at) %> 
   by
-  <%= @page.author_link({ :mode => (@link_mode || :show) }) %>
+  <%= author_link(@page, { :mode => (@link_mode || :show) }) %>
 </div>
