Expire caches for referencing pages on saves and deletes; fixed date formatting in recently_revised
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@393 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/recently_revised.rhtml
+++ b/app/views/wiki/recently_revised.rhtml
@@ -4,13 +4,13 @@
 
 <% unless @pages_by_revision.empty? %>
   <% revision_date = @pages_by_revision.first.revised_at %>
-  <h3><%= revision_date.strftime('%B %e, %Y') %></h3>
+  <h3><%= format_date(revision_date, include_time = false) %></h3>
   <ul>
   <% for page in @pages_by_revision %>
     <% if page.revised_at < revision_date %>
       <% revision_date = page.revised_at %>
       </ul>
-      <h3><%= revision_date.strftime('%B %e, %Y') %></h3>
+      <h3><%= format_date(revision_date, include_time = false) %></h3>
       <ul>
     <% end %>
     <li>
