Speeding up some stuff
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@395 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/authors.rhtml
+++ b/app/views/wiki/authors.rhtml
@@ -5,7 +5,7 @@
     <li>
       <%= link_to_page author %>
       co- or authored:
-      <%= @web.select.pages_authored_by(author).collect { |page| link_to_page(page.name) }.sort.join ', ' %>
+      <%= @page_names_by_author[author].collect { |page_name| link_to_page(page_name) }.sort.join ', ' %>
     </li>
   <% end %>
 </ul>
