Added meta robots tag to the default layout; added error handling to published pages
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@403 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/layouts/default.rhtml
+++ b/app/views/layouts/default.rhtml
@@ -14,7 +14,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
+  <meta name="robots" content="<%= @robots_metatag_value %>" />
+  
   <style type="text/css">
     h1#pageName, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, #TextileHelp h3 { 
       color: #<%= @web ? @web.color : "393" %>; 
