Improved behavior of JavaScript in the author field [from I2 patch by court3nay]
git-svn-id: http://instiki.rubyforge.org/svn/instiki/branches/instiki-ar@411 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -18,8 +18,9 @@
 </p>
 <p>
     <input type="submit" value="Submit" accesskey="s"/> as 
-    <input type="text" name="author" id="authorName" value="<%= @author %>" 
-        onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
+    <%= text_field_tag :author, @author, 
+            :onfocus => "this.value == 'AnonymousCoward' ? this.value = '' : true;",
+            :onblur  => "this.value == '' ? this.value = 'AnonymousCoward' : true" %>
     | 
     <%= link_to('Cancel', {:web => @web.address, :action => 'cancel_edit', :id => @page.name},
           {:accesskey => 'c'})
