Put cursor in the text area when opening wiki/edit
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@425 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/new.rhtml
+++ b/app/views/wiki/new.rhtml
@@ -30,4 +30,5 @@ function cleanAuthorName() {
     document.getElementById('authorName').value = 'AnonymousCoward';
   }
 }
+document.forms["editForm"].elements["content"].focus();
 </script>
