--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -14,7 +14,7 @@
 %>
 
 <p>
-    <textarea name="content" style="width: 450px; height: 500px"><%= h(@flash[:content] || @page.content) %></textarea>
+    <textarea name="content" id="content" style="width: 450px; height: 500px"><%= h(@flash[:content] || @page.content) %></textarea>
 </p>
 <p>
     <input type="submit" value="Submit" accesskey="s"/> as 
@@ -35,4 +35,5 @@ function cleanAuthorName() {
     document.getElementById('authorName').value = 'AnonymousCoward';
   }
 }
+document.forms["editForm"].elements["content"].focus();
 </script>
