--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -1,15 +1,12 @@
-body { background-color: #fff; color: #333; }
+body { background-color: white; color: #333; }
 body, p, ol, ul, td { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 13px; line-height: 18px; }
 
 #Container { float: none; margin: 0 auto; text-align: center; }
 #Content { margin: 0; padding: 5px; text-align: left; border-top: none; float: left; }
 
-a { color: #000; }
+a { color: black; }
 a:visited { color: #666; }
-a:hover { color: #fff; background-color:#000; }
-
-.newWikiWord { background-color: #eee; }
-.newWikiWord a:hover { background-color: white; }
+a:hover { color: white; background-color:#000; }
 
 h1, h2, h3 { color: #333; font-family: georgia, verdana, sans-serif; }
 h1 { font-size: 28px }
@@ -21,6 +18,9 @@ h1#pageName small { color: #444; line-height: 10px; font-size: 10px; padding: 0;
 
 a.nav, a.nav:link, a.nav:visited { color: #000; }
 a.nav:hover { color: #fff; background-color:#000; }
+
+.newWikiWord { background-color: #BFBFBF; }
+.newWikiWord a:hover { background-color: white; }
 
 li { margin-bottom: 7px }
 
